[package]
name = "restbl"
authors = ["Caleb Smith <c.smith@tuta.io>"]
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
crc = "3.0"
memoffset = "0.9.0"
sa = "2.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror-no-std = "2.0"

[dependencies.lexical-core]
version = "0.8.5"
default-features = false
features = ["write-integers"]
optional = true

[features]
default = ["std"]
alloc = []
std = ["alloc", "thiserror-no-std/std"]
yaml = ["lexical-core"]
